# Compute-Volumetrics

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  CMakeUserPresets.json  CreateVSProj.sh  PrepareMedia.py  README.md  Setup.py  SimulationController.json  StarScene.json  build.release.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  dockerfile  prep.bat  prep.sh  setup.sh  vcpkg.json
.devcontainer/: devcontainer.json  dockerfile
build_deps/: install_deps_vcpkg.sh  install_deps_windowing.sh
include/: AABBInfo.hpp  AABBTransfer.hpp  Application.hpp  CameraInfo.hpp  CopyDepthTextureToBuffer.hpp  DeclareDependentPasses.hpp  FinalPresentationRenderer.hpp  FogControlInfo.hpp  FogData.hpp  FogInfo.hpp  FogInfo_json.hpp  FogType.hpp  GetCmdBuffer.hpp  HeadlessMainRenderer.hpp  HeadlessMode.hpp  InteractiveApplication.hpp  InteractiveMode.hpp  LevelSetData.hpp  MathHelpers.hpp  OffscreenRenderer.hpp  PrepareDistanceBufferInfo.hpp  RandomValueTexture.hpp  RandomValueTextureController.hpp  SampledVolumeTexture.hpp  Screen.hpp  ScreenMaterial.hpp  Sphere.hpp  Terrain.hpp  TerrainChunk.hpp  TerrainChunkInfo.hpp  TerrainGrid.hpp  TerrainInfoFile.hpp  TerrainRenderingType.hpp  TerrainShapeInfo.hpp  TerrainShapeInfoLoader.hpp  TerrainShapeInfo_json.hpp  VDBFileInfo.hpp  VDBInfo.hpp  VDBTransfer.hpp  VDBTransferFactory.hpp  (+10 more)
include/command/image_metrics/: GetTransferCopyPass.hpp  RegisterTerrainRecordInfo.hpp  RegisterVolumeRecordInfo.hpp  TriggerCapture.hpp
include/command/sim_controller/: CheckIfDone.hpp  TriggerUpdate.hpp
include/config/: AppConfigInfo.hpp  AppConfigInfo_json.hpp  AppConfigLoader.hpp  AppConfigValidator.hpp  InteractiveConfigInfo.hpp  InteractiveConfigInfo_json.hpp
include/controller/: CircleCameraController.hpp  SimulationController.hpp
include/controller/detail/: SimulationBoundsFile.hpp
include/fog_info/: JsonUtils.hpp
include/loader/: DebugSquareComponent.hpp  SceneDescription.hpp  SceneLoaders.hpp
include/policy/: EngineExitOnControllerDone.hpp  EngineExitOnFlag.hpp  EngineInitPolicy.hpp  FunctionalEngineInitPolicy.hpp  WindowedEngineInitPolicy.hpp
include/render_system/: FogChunkOrchestrator.hpp  FogDispatchInfo.hpp  FogDispatcher.hpp  FogDispatcherBuilder.hpp  FogShaderPushInfo.hpp
include/render_system/fog/: ChunkDispatchGrid.hpp  ChunkOrchestrator.hpp  (+5 more)
include/renderer/: FinalImageRenderer.hpp  FinalizationRenderer.hpp  FullPassVolumeCommands.hpp  PostMemoryBarrierContributor.hpp  PostMemoryBarrierDifferentFamilies.hpp  PreMemoryBarrierContributor.hpp  PreMemoryBarrierDifferentFamilies.hpp  VolumeColorCommands.hpp  VolumeComputeCommands.hpp  VolumeComputeCommandsContributor.hpp  VolumeDistanceCommands.hpp  VolumeGatherWaitFromCO.hpp  VolumePassInfo.hpp  VolumeRenderer.hpp  VolumeRendererCreateDescriptorsPolicy.hpp  VolumeSyncCalcFromFt.hpp  VolumeSyncInfo.hpp  VolumeSyncProvider.hpp  VolumeWaitForPreviousChunk.hpp
include/service/: ImageMetricManager.hpp  SimulationController.hpp
include/structs/: AppConfig.hpp  ExpFogInfo.hpp  FogInfo.hpp  HomogenousRendering.hpp  LinearFogInfo.hpp  MarchedFogInfo.hpp
include/util/: CmdLine.hpp  Color.hpp  Distance.hpp  Math.hpp
media/: SimulationController.json
media/shaders/: bump.frag  bump.vert  default.frag  default.vert  silhouetteEdge.geom  silhouetteEdgeExtrusion.geom  surfaceColor.frag  surfaceColor.vert  vertColor.frag  vertColor.vert
media/terrains/: USGS_13_n40w083_20230911.tif  final.tif  final.tif.aux.xml  height_info.json
scenes/millers/: MillersSceneConfig_1.cfg  MillersSceneConfig_2.cfg  MillersScene_1.json  MillersScene_2.json  SimulationController_2.json  Star_1_m.cfg
scripts/: PatchImageMetricFiles.py  PatchImageMetrics_AddRealTerrain.py  PatchImageMetrics_AddVolumeInfoFromScene.py  PatchImageMetrics_AddVolumeOrientation.py  PatchImageMetrics_CorrectCenterLayout.py  PatchImageMetrics_OverrideShape.py
src/: AABBInfo.cpp  AABBTransfer.cpp  Application.cpp  CameraInfo.cpp  CopyDepthTextureToBuffer.cpp  DeclareDependentPasses.cpp  FinalPresentationRenderer.cpp  FogControlInfo.cpp  FogData.cpp  FogInfo.cpp  FogInfo_json.cpp  FogType.cpp  GetCmdBuffer.cpp  HeadlessMainRenderer.cpp  HeadlessMode.cpp  InteractiveApplication.cpp  InteractiveMode.cpp  LevelSetData.cpp  MathHelpers.cpp  OffscreenRenderer.cpp  OpenVDBFileLoader.cpp  PrepareDistanceBufferInfo.cpp  RandomValueTexture.cpp  RandomValueTextureController.cpp  SampledVolumeTexture.cpp  Screen.cpp  ScreenMaterial.cpp  Sphere.cpp  Terrain.cpp  TerrainChunk.cpp  TerrainChunkInfo.cpp  TerrainGrid.cpp  TerrainInfoFile.cpp  TerrainShapeInfo.cpp  TerrainShapeInfoLoader.cpp  TerrainShapeInfo_json.cpp  VDBFileInfo.cpp  VDBInfo.cpp  VDBTransfer.cpp  VDBTransferFactory.cpp  (+11 more)
src/config/: AppConfigInfo_json.cpp  AppConfigLoader.cpp  AppConfigValidator.cpp  InteractiveConfigInfo_json.cpp
src/controller/: CircleCameraController.cpp  SimulationController.cpp
src/fog_info/: JsonUtils.cpp
src/loader/: SceneDescription.cpp  SceneLoaders.cpp
src/policy/: EngineExitOnControllerDone.cpp  EngineExitOnFlag.cpp  EngineInitPolicy.cpp  FunctionalEngineInitPolicy.cpp  WindowedEngineInitPolicy.cpp
src/render_system/: FogChunkOrchestrator.cpp  FogDispatchInfo.cpp  FogDispatcher.cpp  FogDispatcherBuilder.cpp  FogShaderPushInfo.cpp
src/renderer/: FinalImageRenderer.cpp  FinalizationRenderer.cpp  FullPassVolumeCommands.cpp  PostMemoryBarrierContributor.cpp  PostMemoryBarrierDifferentFamilies.cpp  PreMemoryBarrierContributor.cpp  PreMemoryBarrierDifferentFamilies.cpp  VolumeColorCommands.cpp  VolumeComputeCommands.cpp  VolumeComputeCommandsContributor.cpp  VolumeDescriptorData.cpp  VolumeDistanceCommands.cpp  VolumeGatherWaitFromCO.cpp  VolumeRenderer.cpp  VolumeRendererCreateDescriptorsPolicy.cpp  VolumeSyncCalcFromFt.cpp  VolumeSyncProvider.cpp  VolumeWaitForPreviousChunk.cpp
src/service/: ImageMetricManager.cpp  SimulationController.cpp
src/util/: CmdLine.cpp  Color.cpp  Math.cpp
tests/: CMakeLists.txt  test_AppConfigLoader.cpp  test_cmdLine.cpp  test_coverage_info_json.cpp  test_distance_metrics_json.cpp
(+217 files in other folders)
